# iris-fhir-python-strategy

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  iris.script  iris.script.restart.fhir  merge.cpf  module.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.http
data/: ExportFHIRtoSQL.json
data/bulk/: HAPIOrganization.json
data/isc-demo-fhir-package/: StructureDefinition-demo-FavoriteColor-Extension.json  package.json
examples/: README.md  __init__.py  custom_decorators.py
iris_fhir_python_strategy/: __init__.py  __main__.py  fhir_decorators.py  request_context.py
misc/auth/: secret.json.template
src/python/: custom.py  custom_decorators.py  fhir_decorators.py  iris_adapter.py
tests/: conftest.py
tests/e2e/: conftest.py  test_bad_signature_e2e.py  test_consent_e2e.py  test_fhir_context_e2e.py  test_fhir_customization_e2e.py  test_fhir_decorators_pipeline.py  test_fhir_http_container.py  test_fhir_validation_e2e.py  test_fhir_validation_outcome_e2e.py  test_non_existent_op.py
tests/unit/: test_comprehensive_features.py  test_consent_signature.py  test_coverage_gap.py  test_custom_decorators_sample.py  test_decorator_arity.py  test_e2e_fixtures_customization.py  test_examples_custom_decorators.py  test_fhir_decorators_extended.py  test_fhir_decorators_ordering.py  test_fhir_decorators_pipeline.py  test_fhir_decorators_registry.py  test_fixtures_customization.py  test_request_context.py  test_validation_operation_outcome.py
webgateway/: CSP.conf  CSP.ini  dockerfile  httpd-csp.conf
webgateway/cert/: cert.pem  (+1 more)
(+27 files in other folders)
